sandc/test/fixtures/astRegression/shouldSucceed/productions/file/PackageImportUse.sand
package my.awesome.packagename;

import java.util.List;
import java.util.ArrayList;

use java.util;
use List as L;

pub class PackageImportUse {
    
}