sandc/test/fixtures/astRegression/shouldFail/productions/file/ImportBeforePackage.sand
import java.util.ArrayList;

package foo;

pub class ImportBeforePackage {
    
}